kubernetes/apps/petclinic/petclinic-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic
  labels:
    io.kompose.service: petclinic
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.35.0 (9532ceef3)
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: petclinic
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: petclinic
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.35.0 (9532ceef3)
    spec:
      containers:
        - name: petclinic
          image: acrpetclinicdev.azurecr.io/petclinic:5281b172408e2a2b377e6645f84410eafb3e6078
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8000
              protocol: TCP
            - containerPort: 9464
              protocol: TCP
      restartPolicy: Always
