kubernetes/apps/petclinic/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: petclinic-service
  labels:
    app: petclinic
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
    name: http
  - port: 9464
    targetPort: 9464
    name: metrics
  selector:
    app: petclinic
