kubernetes/apps/petclinic/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: petclinic-ingress
  namespace: petclinic
spec:
  ingressClassName: nginx
  rules:
    - host: petclinic.yakindario.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: petclinic
                port: { number: 8080 }
    - host: metrics.yakindario.me
      http:
        paths:
          - path: /actuator/prometheus
            pathType: Prefix
            backend:
              service:
                name: petclinic
                port: { number: 9464 }
